--- a/js/particlesjs-config.json
+++ b/js/particlesjs-config.json
@@ -2,7 +2,7 @@ particlesJS(
 {
   "particles": {
     "number": {
-      "value": 80,
+      "value": 400,
       "density": {
         "enable": true,
         "value_area": 800
@@ -55,7 +55,7 @@ particlesJS(
     },
     "move": {
       "enable": true,
-      "speed": 14.430708547789692,
+      "speed": 20,
       "direction": "top-right",
       "random": true,
       "straight": true,
@@ -69,7 +69,7 @@ particlesJS(
     }
   },
   "interactivity": {
-    "detect_on": "canvas",
+    "detect_on": "windows",
     "events": {
       "onhover": {
         "enable": true,
